# FaultWitness

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .sops.yaml  AGENTS.md  CHANGELOG.md  Makefile  PROJECT_STATE.yaml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  eval_badcase.yml
.github/rulesets/: main.json
.github/workflows/: baseline.yml  external-links.yml
config/models/: catalog.yaml
config/secrets/: example.yaml  schema.yaml  toolchain.lock.yaml
deploy/bootstrap/: build_ssh_askpass.ps1  init_identities.ps1  install_tools.ps1  probe_host.py  ssh-askpass.cmd
deploy/control-api/: Dockerfile
deploy/k3s/: capture_baseline.py  foundation.yaml  install_core.sh  network-smoke.yaml  nvidia-device-plugin.yaml  runtime-smoke.yaml  versions.lock.yaml
deploy/keycloak/: faultwitness-realm.json
deploy/model-gateway/: Dockerfile
deploy/observability/: Dockerfile
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  INDEX.yaml
docs/architecture/: ARCHITECTURE.yaml  CONTAINER_ARCHITECTURE.md  DATA_AND_CONTROL_FLOW.md  DEPLOYMENT_AND_TRUST_BOUNDARIES.md  STATE_MACHINES.md  SYSTEM_CONTEXT.md
docs/blueprint/: FINAL_PLAN.md
docs/claims/: CLAIMS.yaml
docs/contracts/: COMMAND_EVENT_CATALOG.yaml  CONTROL_API_RUNTIME.md  FAILURE_SEMANTICS.yaml  README.md  STATE_MACHINE_DIAGRAMS.md  TYPE_CATALOG.yaml  WALKTHROUGH_BINDINGS.yaml  asyncapi.yaml  openapi.yaml
docs/governance/: ASSET_SYNC.md
docs/requirements/: EVIDENCE_MATRIX.yaml  METHODOLOGY.md  ORIGINALITY.md  REQUIREMENTS.yaml  SOURCE_CATALOG.yaml  THIRD_PARTY.md  UPSTREAM.md
docs/roadmap/: PHASES.md
docs/runbooks/: CONTROL_API.md  DURABLE_RUNTIME.md  EXECUTABLE_CONTRACTS.md  MODEL_GATEWAY.md  OBSERVABILITY.md  PLATFORM_SERVICES.md  SECURE_BOOTSTRAP.md
docs/security/: THREAT_MODEL.md
governance/: ASSETS.yaml
governance/gates/: G00.yaml  (+2 more)
migrations/: 001_i0011_durable_runtime.sql  002_i0012_control_api.sql  003_i0013_observability.sql
tests/: __init__.py
tools/: bootstrap_check.py  validate-mermaid.mjs
(+215 files in other folders)
