[project]
name = "faultwitness"
version = "0.0.0"
description = "Evidence-driven reliability agent platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "FaultWitness Contributors" }]
dependencies = [
    "asyncpg>=0.30,<1",
    "cryptography>=45,<47",
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "jsonschema>=4.24,<5",
    "pyjwt[crypto]>=2.10,<3",
    "pydantic>=2.11,<3",
    "redis>=6,<7",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "pyyaml>=6.0,<7",
    "ruff>=0.12,<1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faultwitness", "src/faultwitness_dev"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
